Add HotSpot VM configuration gate